--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "This repository implements a **B2B2C marketplace** that connects **farmers**, **mama mboga vendors**, **riders**, and **urban buyers** using a **platform-controlled escrow mechanism**. The platform’s core promise is **freshness**, **trust**, and **simplicity** for vendors with **low digital literacy**.",
   "main": "backend/index.js",
   "scripts": {
-    "dev":"nodemon backend/index.js"
+    "dev": "nodemon backend/index.js"
   },
   "keywords": [],
   "author": "",
-  "type" : "module",
+  "type": "module",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -18,7 +18,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^4.3.0",
-    "mongoose": "^8.19.0"
+    "mongoose": "^8.19.0",
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
