--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
-{
+﻿{
   "name": "mbogafresh",
   "version": "1.0.0",
-  "description": "This repository implements a **B2B2C marketplace** that connects **farmers**, **mama mboga vendors**, **riders**, and **urban buyers** using a **platform-controlled escrow mechanism**. The platform’s core promise is **freshness**, **trust**, and **simplicity** for vendors with **low digital literacy**.",
+  "type": "module",
   "main": "backend/index.js",
   "scripts": {
-    "dev": "nodemon backend/index.js"
+    "dev": "nodemon backend/index.js",
+    "seed": "node backend/seedData.js"
   },
-  "keywords": [],
-  "author": "",
-  "type": "module",
-  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "cookie-parser": "^1.4.7",
-    "crypto": "^1.0.1",
-    "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mailtrap": "^4.3.0",
     "mongoose": "^8.19.0",
-    "react-router-dom": "^7.9.3"
+    "dotenv": "^17.2.3",
+    "cors": "^2.8.5",
+    "cookie-parser": "^1.4.7",
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^4.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
