Modified the Vendors product

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,15 @@ dist
 dist-ssr
 *.local
 
+uploads
+backend/uploads
+
+.uploads
+.backend/uploads 
+
+*uploads
+*backend/uploads
+
 .env
 
 # Editor directories and files
@@ -24,3 +33,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+*.uploads
+*/uploads
