--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mbogafresh",
   "version": "1.0.0",
-  "description": "This repository implements a **B2B2C marketplace** that connects **farmers**, **mama mboga vendors**, **riders**, and **urban buyers** using a **platform-controlled escrow mechanism**. The platformâ€™s core promise is **freshness**, **trust**, and **simplicity** for vendors with **low digital literacy**.",
+  "description": "This repository implements a **B2B2C marketplace** that connects **farmers**, **mama mboga vendors**, **riders**, and **urban buyers** using a **platform-controlled escrow mechanism**. The platform's core promise is **freshness**, **trust**, and **simplicity** for vendors with **low digital literacy**.",
   "main": "backend/index.js",
   "scripts": {
     "dev": "nodemon backend/index.js"
