--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "lucide-react": "^0.545.0",
     "qr-scanner": "^1.4.2",
     "qrcode.react": "^4.2.0",
