--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.12.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
     "qr-scanner": "^1.4.2",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.3",
     "recharts": "^3.3.0",
     "tailwindcss": "^4.1.14"
